--- a/mycss_web.css
+++ b/mycss_web.css
@@ -37,6 +37,6 @@
 img{
    margin-left: auto;
   margin-right: auto;
- /* width: 50%;
-  border-radius: 50%;*/
+ width: 50%;
+  border-radius: 50%;
 }
